[gd_scene load_steps=4 format=3 uid="uid://81l8rhk1tkwo"]

[ext_resource type="Script" uid="uid://bnoqq2bveggci" path="res://UI/Pause Menu/pause_menu.gd" id="1_8siy5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q706g"]
bg_color = Color(0.642197, 0.563074, 0.713144, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0n8i1"]
bg_color = Color(0.802287, 0.471502, 0.69827, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8siy5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q706g")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="ColorRect/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_0n8i1")
action_mode = 0
text = "Resume"

[node name="RestartButton" type="Button" parent="ColorRect/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="ColorRect/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
